; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_rand.c_Curl_rand.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_rand.c_Curl_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_easy = type { i32 }

@CURLE_BAD_FUNCTION_ARGUMENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_rand(%struct.Curl_easy* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.Curl_easy*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store %struct.Curl_easy* %0, %struct.Curl_easy** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load i32, i32* @CURLE_BAD_FUNCTION_ARGUMENT, align 4
  store i32 %11, i32* %8, align 4
  %12 = load i64, i64* %7, align 8
  %13 = icmp ugt i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @DEBUGASSERT(i32 %14)
  br label %16

16:                                               ; preds = %49, %3
  %17 = load i64, i64* %7, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %50

19:                                               ; preds = %16
  %20 = load i64, i64* %7, align 8
  %21 = icmp ult i64 %20, 4
  br i1 %21, label %22, label %24

22:                                               ; preds = %19
  %23 = load i64, i64* %7, align 8
  br label %25

24:                                               ; preds = %19
  br label %25

25:                                               ; preds = %24, %22
  %26 = phi i64 [ %23, %22 ], [ 4, %24 ]
  store i64 %26, i64* %10, align 8
  %27 = load %struct.Curl_easy*, %struct.Curl_easy** %5, align 8
  %28 = call i32 @randit(%struct.Curl_easy* %27, i32* %9)
  store i32 %28, i32* %8, align 4
  %29 = load i32, i32* %8, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %25
  %32 = load i32, i32* %8, align 4
  store i32 %32, i32* %4, align 4
  br label %52

33:                                               ; preds = %25
  br label %34

34:                                               ; preds = %37, %33
  %35 = load i64, i64* %10, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %49

37:                                               ; preds = %34
  %38 = load i32, i32* %9, align 4
  %39 = and i32 %38, 255
  %40 = trunc i32 %39 to i8
  %41 = load i8*, i8** %6, align 8
  %42 = getelementptr inbounds i8, i8* %41, i32 1
  store i8* %42, i8** %6, align 8
  store i8 %40, i8* %41, align 1
  %43 = load i32, i32* %9, align 4
  %44 = lshr i32 %43, 8
  store i32 %44, i32* %9, align 4
  %45 = load i64, i64* %7, align 8
  %46 = add i64 %45, -1
  store i64 %46, i64* %7, align 8
  %47 = load i64, i64* %10, align 8
  %48 = add i64 %47, -1
  store i64 %48, i64* %10, align 8
  br label %34

49:                                               ; preds = %34
  br label %16

50:                                               ; preds = %16
  %51 = load i32, i32* %8, align 4
  store i32 %51, i32* %4, align 4
  br label %52

52:                                               ; preds = %50, %31
  %53 = load i32, i32* %4, align 4
  ret i32 %53
}

declare dso_local i32 @DEBUGASSERT(i32) #1

declare dso_local i32 @randit(%struct.Curl_easy*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
